Mejoras en la barra de navegación y estado en vivo.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
+
+<body>
+
 <!-- ================= CHAT EMBEBIDO ================= -->
 
 <div class="chat-toggle" id="chatToggle">
@@ -28,9 +31,6 @@
     </iframe>
   </div>
 </aside>
-
-
-<body>
 
 <audio id="liveSound" loop>
   <source src="/assets/audio/live-ambient.mp3" type="audio/mpeg">
@@ -102,12 +102,14 @@
   </div>
 
   <a
-    href="https://www.twitch.tv/lvl5squad"
-    target="_blank"
-    class="btn btn-violeta event-btn"
-  >
-    Activá la alerta en Twitch
-  </a>
+  href="https://www.twitch.tv/lvl5squad"
+  target="_blank"
+  class="btn btn-violeta event-btn"
+  id="eventBtn"
+>
+  Activá la alerta en Twitch
+</a>
+
 
   <p class="event-note">
     Canjeá tus puntos del canal durante el stream 🎮
