Modificación en el iframe de chat de twitch.

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
   </header>
 
   <div class="chat-body">
-    <iframe
-      src="https://www.twitch.tv/embed/lvl5squad/chat?parent=levelfivesquad.com.ar"
-      height="100%"
-      width="100%"
-      allowfullscreen>
-    </iframe>
+<iframe
+  src="https://www.twitch.tv/embed/lvl5squad/chat?parent=levelfivesquad.com.ar&parent=www.levelfivesquad.com.ar&parent=localhost&parent=127.0.0.1"
+  height="100%"
+  width="100%"
+  frameborder="0">
+</iframe>
+
   </div>
 </aside>
 
