Cambios en style para navbar fija y sombra en vivo; ajustes en index.html para agenda semanal comentada y badge de "Arranca pronto".

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         Twitch
       </a>
     </div>
+
+    <div class="prelive-badge" id="preliveBadge">
+  ⏳ Arranca pronto
+</div>
+
   </nav>
 
   <div class="header-banner">
@@ -71,12 +76,33 @@
       <p id="liveNote" class="text-dim small">
         Seguinos en Twitch y activá notificaciones.
       </p>
+      <p id="preliveMessage" class="prelive-message"></p>
+
     </div>
 
     <div id="viewerCount" class="viewer-count">
       👁 <span>0</span> viewers
     </div>
   </section>
+  
+  <section class="lvl5-card next-stream" id="nextStream">
+  <span class="ns-label">📅 Próximo stream</span>
+
+  <h3 class="ns-title">Mirá cuándo salimos en vivo</h3>
+
+  <p class="ns-desc">
+    Los horarios se actualizan en tiempo real en Twitch.
+  </p>
+
+  <a
+    href="https://www.twitch.tv/lvl5squad/schedule"
+    target="_blank"
+    class="btn btn-violeta ns-btn"
+  >
+    Ver agenda completa
+  </a>
+</section>
+
 
   <div class="sound-indicator">
     <div class="sound-bars">
@@ -117,6 +143,32 @@
   </p>
 </section>
 
+<!-- ================= AGENDA SEMANAL ================= -->
+
+<!--section class="lvl5-card schedule" id="schedule">
+  <h2 class="section-title">Agenda LVL5</h2>
+  <p class="text-dim">Streams y eventos de la semana</p>
+
+  <div class="schedule-grid">
+    <div class="schedule-day" data-day="1">
+      <span class="day">Lunes</span>
+      <span class="time">21:00</span>
+      <span class="label">Charlita + comunidad</span>
+    </div>
+
+    <div class="schedule-day" data-day="3">
+      <span class="day">Miércoles</span>
+      <span class="time">21:00</span>
+      <span class="label">Gaming Night 🎮</span>
+    </div>
+
+    <div class="schedule-day" data-day="5">
+      <span class="day">Viernes</span>
+      <span class="time">22:00</span>
+      <span class="label">Evento / Sorteo</span>
+    </div>
+  </div>
+</section> -->
 
   <section id="links" class="social-section">
     <h2 class="section-title">La comunidad vive acá</h2>
